make twitter-compatible cards/embeds

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 		<meta property="og:description" content="Puroto is a currently still in development social media plaform made for furries">
 		<meta property="og:image" content="/preview.png">
 
+		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:title" content="Puroto - A future social network for furries">
 		<meta property="twitter:site" content="puroto.net">
 		<meta property="twitter:image" content="/preview.png">
