--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:title" content="Puroto - A future social network for furries">
 		<meta property="twitter:site" content="puroto.net">
-		<meta property="twitter:image" content="/preview.png">
+		<meta property="twitter:image" content="https://raw.githubusercontent.com/PurotoApp/Lambda/master/public/preview.png">
 		<meta property="twitter:description" content="Puroto is a currently still in development social media plaform made for furries">
 		
 		<title>Puroto - A future social network for furries</title>
