--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,27 @@
 		<meta name="description" content="Puroto, A future social network for furries!" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://www.puroto.net/">
-		<meta property="og:title" content="Puroto - A future social network for furries">
-		<meta property="og:description" content="Puroto is a currently still in development social media plaform made for furries">
-		<meta property="og:image" content="/preview.png">
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://www.puroto.net/" />
+		<meta property="og:title" content="Puroto - A future social network for furries" />
+		<meta
+			property="og:description"
+			content="Puroto is a currently still in development social media plaform made for furries"
+		/>
+		<meta property="og:image" content="/preview.png" />
 
-		<meta property="twitter:card" content="summary_large_image">
-		<meta property="twitter:title" content="Puroto - A future social network for furries">
-		<meta property="twitter:site" content="puroto.net">
-		<meta property="twitter:image" content="https://raw.githubusercontent.com/PurotoApp/Lambda/master/public/preview.png">
-		<meta property="twitter:description" content="Puroto is a currently still in development social media plaform made for furries">
-		
+		<meta property="twitter:card" content="summary_large_image" />
+		<meta property="twitter:title" content="Puroto - A future social network for furries" />
+		<meta property="twitter:site" content="puroto.net" />
+		<meta
+			property="twitter:image"
+			content="https://raw.githubusercontent.com/PurotoApp/Lambda/master/public/preview.png"
+		/>
+		<meta
+			property="twitter:description"
+			content="Puroto is a currently still in development social media plaform made for furries"
+		/>
+
 		<title>Puroto - A future social network for furries</title>
 
 		<link rel="icon" type="image/png" href="/favicon.png" />
