--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="Puroto, A future social network for furries!" />
-		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<meta
+			name="viewport"
+			content="width=device-width,initial-scale=1,maximum-scale=5,viewport-fit=cover"
+		/>
 
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://www.puroto.net/" />
