--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,9 @@
 		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="stylesheet" href="/global.css" />
 		<link rel="stylesheet" href="/build/bundle.css" />
-
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
 		<script defer src="/build/bundle.js"></script>
 	</head>
 
